--- a/Example/.vscode/launch.json
+++ b/Example/.vscode/launch.json
@@ -4,6 +4,17 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
+        {
+            "name": "Debug iOSDevcie",
+            "cwd": "${workspaceFolder}",
+            "type": "reactnative",
+            "request": "launch",
+            "target": "device",
+            "platform": "ios"
+        
+            
+        },
         {
             "name": "Debug Android",
             "cwd": "${workspaceFolder}",
