--- a/Example/android/settings.gradle
+++ b/Example/android/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'Example'
 include ':react-native-BLEMonitoringManager'
-project(':react-native-BLEMonitoringManager').projectDir = new File(rootProject.projectDir, '../../android/BLEMonitoringManager')
+project(':react-native-BLEMonitoringManager').projectDir = new File(rootProject.projectDir, '../../android')
 
 include ':app'
